Fixed an issue with clipping on profile page

--- a/css/profile.css
+++ b/css/profile.css
@@ -97,12 +97,13 @@ main {
 	font-size:24px;
 	display:block;
 	font-weight:bold;
-	padding-bottom:10px;
 }
 #group_container {
 	overflow-x:auto;
 	overflow-y:hidden;
 	white-space:nowrap;
+	box-sizing:border-box;
+	padding-top:20px;
 }
 .group_container {
 	perspective:1000px;
